src/test/resources/example/cocos/valid/validPostStatementName.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl validPostStatementName {
  context boolean BidMessage.isAuctionsSpecific()
  pre: true;
  post: result == true;
}
