src/test/resources/example/cocos/invalid/invalidPrePost.ocl
ocl invalidPrePost {
  context boolean BidMessage.isAuctionsSpecific()
  
}